# HECKTOR

./: .gitignore  Dataset.py  Evaluation.ipynb  HECKTOR_DataModule.py  HECKTOR_Dataset.py  HECKTOR_Model.py  Model.py  data_preparation.ipynb  prepare_crops.py  pyproject.toml  train.py  train_PCA.py
lassonet1/examples/: boston_housing.py
notebooks/: Evaluation.ipynb  data_exploration.ipynb  data_preparation.ipynb  temp.ipynb  torch_dataset_overview.ipynb
src/hecktor_survival/dataset/: augmentation.py  dataset.py  statsmanager.py
src/hecktor_survival/lightning_modules/: __init__.py  data_module.py  model_module.py
src/hecktor_survival/loss_fn/: loss_fn.py
src/hecktor_survival/scripts/: train.py
src/lightning_modules/: data_module.py  dataset.py  model_module.py  models.py
src/loss_fn/: loss_fn.py
src/scripts/: prepare_crops_bbox.py  prepare_crops_centroid.py  train.py
